<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>s2_perception</name>
  <version>1.0.0</version>
  <description>S2 Sensory and Perception Management System for Mobile Robotics</description>
  <maintainer email="dev@robotics.com">S2 Perception Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Core ROS2 Dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- Sensor Dependencies -->
  <depend>realsense2_camera</depend>
  <depend>realsense2_camera_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  
  <!-- SLAM Dependencies -->
  <depend>isaac_ros_visual_slam</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  
  <!-- Perception Dependencies -->
  <depend>vision_msgs</depend>
  <depend>message_filters</depend>
  
  <!-- Diagnostic Dependencies -->
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>

  <!-- Launch Dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- Testing Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>